--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -177,6 +177,46 @@ section
 	right 0px
 	top -1px
 
+.social
+	padding 2em 24px
+	position relative
+	.consejos
+		border-bottom 1px solid borde
+		padding 0 0 2em 0
+		transtition all .2s ease
+		-webkit-transtition all .2s ease
+		ul
+		li
+			display inline-block
+			margin 0
+			padding 0
+		a
+			color gris
+			font-size .7em
+			margin 0 2em 3em 0
+			text-decoration none
+			text-transform uppercase
+			&:hover
+				color turquesa
+	.compartir
+		display inline-block
+		margin 1em 1em 1em 0
+		width 60%
+		.facebook
+		.google
+		.twitter
+			display inline-block
+			padding 1em 1em 1em 0
+		.twitter
+			margin 0 -1.15em 0 0 
+			padding 1em 0 1em 0
+		p
+			color #404040
+			font-weight bold
+			font-size 1.2em
+			margin 0
+
+
 		
 
 
