--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -23,14 +23,15 @@ header
 		left 2em
 		height auto
 		position relative
-		top .78em
-		width 7em
+		top .9em
+		width 6.5em
 	h1
 		left 4.3em
 		position absolute
 		top .3em
 		small
 			left 5px
+			letter-spacing 5px
 			position absolute
 			top 47px
 			white-space nowrap
@@ -308,5 +309,36 @@ section
 	transition all .5s ease
 
 .social
-	.comentario
-		padding 0 1em
+	padding 2em 24px
+	position relative
+	.consejos
+		border-bottom 1px solid borde
+		padding 0 0 2em 0
+		transtition all .2s ease
+		-webkit-transtition all .2s ease
+		ul
+		li
+			display inline-block
+			margin 0
+			padding 0
+		a
+			color gris
+			font-size .7em
+			margin 0 2em 3em 0
+			text-decoration none
+			text-transform uppercase
+			&:hover
+				color turquesa
+	.compartir
+		display inline-block
+		margin 1em 1em 1em 0
+		width 60%
+		.facebook
+		.twitter
+			display inline-block
+			padding 1em 1em 1em 0
+		p
+			color #404040
+			font-weight bold
+			font-size 1.2em
+			margin 0
