--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -335,13 +335,12 @@ h1
 	font-size 2.5em
 	font-weight normal
 	margin 0 
-	// text-shadow 1px 1px 0 gris
 	small
 		color rgba(white,.5)
 		display block
 		font-family subtitulo 
 		font-size .5em
-		letter-spacing 2px
+		letter-spacing 5px
 		text-transform uppercase
 		whitespace nowrap
 
@@ -373,6 +372,8 @@ p
 	left 1.2em
 	position fixed
 	z-index 10
+	transition all .3s ease
+	-webkit-transition all .3s ease
 	a 
 		background #d9d9d9
 		border-radius 50%
@@ -467,7 +468,7 @@ p
 		position relative
 		pre
 			color #a6da27
-			padding 0 margen 0 margen
+			padding 0 margen 
 			text-align left
 		.barra
 			background lightgrey
