Ajustes en fuente de terminal en tidas las vistas

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -148,8 +148,25 @@ section
 			width 95%
 
 .terminal
+	background claro
+	border-bottom 1px solid borde
+	border-top 1px solid borde
+	margin 1em 0
+	padding 20px 0 0 0
+	.enunciado_comando
+		color white
+		font-size .6em
+		letter-spacing 2px
+		margin 0 1em 0 -1em
+		text-align center
+		text-transform uppercase
+		&:first-child
+			margin .2em margen 0 margen
 	.ventana_terminal
-		margin 30px .7em	
+		margin 30px 1em
+		pre
+			font-size .9em
+			padding 0 1em 
 
 .social
 	padding 2em 24px
@@ -184,9 +201,9 @@ section
 		margin 1em 1em 0 0
 		width 100%
 		.facebook
+		.twitter
 			display inline-block
-			margin 0
-			width 25%
+			padding 1em 1em 1em 0
 		p
 			color #404040
 			font-weight bold
