Mejora en el logo

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -5,6 +5,7 @@ article
 	&:last-child
 		margin-bottom 1em
 	.materiales_libro
+		margin 1em 0 0 0 
 		.libros
 			.ejemplar
 				padding 0 0 0 1.5em
@@ -20,6 +21,8 @@ article
 				.portada
 					margin 0 1em 0 0
 					width 28%
+	.materiales_video
+		margin 1em 0 0 0 
 	figure
 		.laptop
 		.movil
