--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -83,7 +83,6 @@ article
 	// box-shadow: 0 0 6px rgba(0,0,0,0.2);
 	box-shadow: 0 2px 2px rgba(0,0,0,0.3);
 	margin 1em
-	padding 0 0 1em 0
 	&:last-child
 		margin-bottom 4.5em
 	.contenido
@@ -176,7 +175,7 @@ article
 		background claro
 		border-bottom 1px solid borde
 		border-top 1px solid borde
-		margin 1em 0 3em 0 
+		margin 1em 0 1em 0 
 		padding 1em 
 		.video
 			background white
@@ -232,7 +231,7 @@ article
 		background white
 		border-bottom 1px solid borde
 		border-top 1px solid borde
-		margin 1em 0 3em 0 
+		margin 1em 0 1em 0 
 		padding 1em 
 		.libros
 			border-bottom 1px solid rgba(borde,.5)
@@ -481,7 +480,7 @@ p
 			&:before
 				content '$ '
 		.retorno
-			color #e5db74
+			color #3ec1fb
 
 ::selection
 	background yellow
